fix: address Gemini review findings for path parameter route support
- Restrict parameter name validation regex from [A-Za-z][A-Za-z0-9_]* to
  [A-Za-z][A-Za-z0-9]* to prevent PatternSyntaxException at runtime: Java
  named capturing groups do not allow underscores in group names
- Accumulate literal path segments before quoting to produce cleaner, more
  efficient regex patterns (e.g. \Qapi\E instead of \Qa\E\Qp\E\Qi\E)
- Use Collections.unmodifiableMap instead of Map.copyOf to preserve insertion
  order of the LinkedHashMap parameter map
- Add defensive null check in GatewayRequestHandler.resolveHandler to prevent
  potential NullPointerException for non-hierarchical or malformed requests
- Add test case for underscore rejection in parameter names

Co-Authored-By: Claude <noreply@anthropic.com>